[package]
name = "ljka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8"
bevy-inspector-egui = "0.13.0"
rand = "0.8"
ndarray = "0.15"
ndarray-rand = "0.14"
plotters = "0.3.4"
